1998-12-14  Jim Blandy  <jimb@zwingli.cygnus.com>

	* Makefile.in: Regenerated.

1998-12-05  Jim Blandy  <jimb@zwingli.cygnus.com>

	* pairs.h (SCM_NEWCELL): When DEBUG_FREELIST is defined, don't
	take the address of _into; it might be a register.  Just have
	scm_debug_newcell return the new cell.
	* gc.c (scm_debug_newcell): Just return the new cell, instead of
	taking the address of a place to store it as an argument.
	* gc.h (scm_debug_newcell): Change declaration.
	(Thanks to Greg Harvey.)

1998-12-08  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* ramap.c (array-copy-in-order!, array-map-in-order):  New names.
	Replaces old names serial-array-copy! and serial-array-map!.

	* evalext.c (map-in-order): New name.  Replaces serial-map.

1998-12-05  Jim Blandy  <jimb@totoro.red-bean.com>

	* smob.c (freeprint): New function.
	(freecell): Use it to print freed objects, for slightly easier
 	debugging.

1998-12-04  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* backtrace.c (display_frame): Made more robust.  Doesn't throw an
	error if no source properties can be found for a frame.  (Thanks
	to Christian Lynbech.)

1998-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* objects.h: Removed slots direct_supers and direct_slots from the
	definitions of the rudimentary classes described by objects.h.

	* objects.c, objects.h (scm_entity_p): New procedure.  Together
	with the predicates scm_procedure_p and scm_struct_p, this
	predicate makes it possible to differ between structs, entities
	and operators.

	* modules.c, modules.h (scm_resolve_module): New function.

1998-11-26  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* objects.h (SCM_METACLASS_STANDARD_LAYOUT,
	SCM_METACLASS_OPERATOR_LAYOUT): Removed slots `direct_supers' and
	`direct_slots'.

	* objects.c (scm_entity_p): New procedure.

	* procprop.c (scm_i_procedure_arity): Bugfix: Return correct value
	for asubrs, rpsubrs, lsubrs and lsubr_2s.

1998-11-26  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>
